Fix outline offset for print buttons
The way it was working, there was an offset because of the sticky
div heading stacked above it, and the z-index was higher, so the
focus ring was kind of cut off.

--- a/nofos/bloom_nofos/static/shared.css
+++ b/nofos/bloom_nofos/static/shared.css
@@ -324,6 +324,10 @@ ul ul ul ul ul ul:not([type]):not(.usa-list--unstyled) {
     display: inline-block;
   }
 
+  .usa-button-group--segmented .usa-button:focus {
+    outline-offset: 0;
+  }
+
   .usa-button-group.usa-button-group--segmented
     .usa-button-group__item:first-of-type
     button {
